--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
