--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
     "expo": "~37.0.3",
+    "expo-font": "~8.1.0",
     "firebase": "^7.9.0",
     "native-base": "2.13.8",
     "react": "~16.9.0",
@@ -23,8 +24,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.11",
-    "react-navigation-tabs": "^2.8.11",
-    "expo-font": "~8.1.0"
+    "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
